--- a/dev.md.html
+++ b/dev.md.html
@@ -45,6 +45,28 @@ Keyboard
 * +-----+---+---+---+-----------------+---+---+---+---+---+---+---+
 *********************************************************************
 
+## Niz 84 Key (AutoHotKey)
+
+*********************************************************************
+* +---+ +---+---+---+---+ +---+---+---+---+ +---+---+---+---+ +---+
+* |ESC| |F1 |F2 |F3 |F4 | |F5 |F6 |F7 |F8 | |F9 |F10|F11|F12| |Del|
+* +---+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+
+* | ` | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 0 | - | = |  BS   |Hom|
+* +---+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+---+
+* |Tab  | Q | W | E | R | T | Y | U | I | O | P | [ | ] | \   |PgU|
+* +-----+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+-+-----+---+
+* |Caps   | A | S | D | F | G | H | J | K | L | ; | ' | Enter |PgD|
+* +-------+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+---+---+
+* |Shift    | Z | X | C | V | B | N | M | , | . | / |Zen  | U |End|
+* +-----+---+---+---+---+---+---+---+-+-+-+-+---+-+-+-+---+---+---+
+* |Ctrl |Fn |Win|Alt|                 |Fn |Alt|App|Ctl| L | D | R |
+* +-----+---+---+---+-----------------+---+---+---+---+---+---+---+
+*********************************************************************
+
+App      | Key             | Description
+---------|-----------------|---
+Windows  | RShift          | Hankaku/Zenkaku
+
 ### Bluetooth接続
 
 1. 接続済みのすべてのPC, smartphone等のBluetoothをOFFにする
@@ -83,6 +105,29 @@ C    | prefix ]        | paste
 - P: pane
 - C: copy mode
 - * my key maps
+
+<meta name="keywords" content="*memo_my.tmux.keymap*">
+## My Tmux Keymap
+
+App         | Key                    | Description
+---         | ---                    | ---
+tmux        | F1                     | tmux.prefix
+tmux        | F7                     | tmux.toggle left pane width 60/80
+tmux        | F8                     | tmux.maximize pane
+tmux.pane   | M-h                    | pane left
+            | M-j                    | pane down
+            | M-k                    | pane up
+            | M-l                    | pane right
+            | F1 [hjkl]              | move to a pane
+            | F1 [HJKL]              | resize the current pane
+tmux.split  | F1 -                   | hrizontal split pane
+            | F1 `|`                 | vertical split pane
+            | F1 0                   | split 2 panes
+            | F1 9                   | split 3 panes
+            | F1 8                   | split 4 panes
+tmux.open   | F1 r                   | reload ~/.tmux.conf
+            | F1 y                   | yank to the clipboard
+            | F1 p                   | paste from the clipboard
 
 <meta name="keywords" content="*memo_dev.vifm*">
 vifm
