--- a/os.md.html
+++ b/os.md.html
@@ -15,6 +15,10 @@ Windows
 - device manager
 - disk manager
 - credential manager
+- performance
+  - Visual Effects
+    - Custom
+      - Show thumbnails instead of icons
 
 ### キーボード配列変更
 - 設定 > 日付と時刻 > 地域と言語 > 日本語 > オプション > ハードウェアキーボードレイアウト
