--- a/vcs.md.html
+++ b/vcs.md.html
@@ -247,6 +247,8 @@ git ls-remote --tags      # リモートタグ一覧
 git merge {branch}      # 指定したブランチを現在のブランチに統合する
 git merge --continue    # after resolving conflicts
 git merge --abort       # cancel
+git checkout --ours {file}
+git checkout --theirs {file}
 
 [master] --o--H
             \
