--- a/init.md.html
+++ b/init.md.html
@@ -20,6 +20,7 @@ Setup (bash/vim/python)
 - python3-64bit
 - nodejs
 - vs2019
+- vscode
 - android studio
 
 ### linux
@@ -29,12 +30,14 @@ apt install nodejs npm
 
 ## symbolic links (admin on command prompt)
 - WinHome
+
 - Desktop
 - Downloads
-- Dropbox
-- GoogleDrive
 - MyConfig
 - MyShare
+
+- GoogleDrive
+- Dropbox
 
 ## bash
 ~~~
