--- a/links.md.html
+++ b/links.md.html
@@ -102,6 +102,7 @@ Develop
 ## フォント
 - [プログラミング用日本語フォント](https://github.com/tsunesan3/awsome-jp-coding-fonts)
   - [Cica](https://github.com/miiton/Cica)
+    - [NerdFont](https://miiton.github.io/Cica/)
   - [Myrica](https://myrica.estable.jp/)
   - [Rounded Mgen+](http://jikasei.me/font/rounded-mgenplus/)
 - [日本語等幅フォント](https://qiita.com/hamaguchitm/items/546d40b7777bd9242e78)
@@ -119,6 +120,7 @@ Develop
   - [dein](https://github.com/Shougo/dein.vim)
 -->
 - File manager
+  - [fern](https://github.com/lambdalisue/fern.vim)
   - [nerdtree](https://github.com/scrooloose/nerdtree)
   - [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
   - [ctrlp](https://github.com/ctrlpvim/ctrlp.vim)
@@ -151,7 +153,8 @@ Develop
   - [gruvbox](https://github.com/morhetz/gruvbox)
   - [solarized](https://github.com/altercation/vim-colors-solarized)
   - [molokai](https://github.com/tomasr/molokai)
-- [nerd-fonts](https://github.com/ryanoasis/nerd-fonts)
+- [NERD FONTS](https://www.nerdfonts.com/)
+  - [github](https://github.com/ryanoasis/nerd-fonts)
   - [vim-devicons](https://github.com/ryanoasis/vim-devicons)
   - [vim-nerdtree-syntax-highlight](https://github.com/tiagofumo/vim-nerdtree-syntax-highlight)
 - [neovim](https://neovim.io/)
