--- a/prog.md.html
+++ b/prog.md.html
@@ -349,11 +349,11 @@ pip install -r requirements.txt
 
 import sys
 
-def main():
+def main(argv):
     print("Hello world.")
 
 if __name__ == "__main__":
-    main()
+    main(sys.argv)
 ~~~
 
 ## print sys.path
